# DBMS_with_MQTT

./: .gitignore  CMakeLists.txt  MQTT_COMMUNICATION_GUIDE.md  README.md  README_NEW.md  check_speeds.js  config.env  config.h  database_manager.cpp  database_manager.h  db_mqtt.cpp  listen_statistics.sh  main.cpp  mongodb_query_manual.md  mqtt_handler.cpp  mqtt_handler.h  test_all_statistics.sh  test_statistics.sh  test_statistics_with_range.sh
